--- a/templates/movie.html
+++ b/templates/movie.html
@@ -4,8 +4,12 @@
 <head>
     <title>Auto Fullscreen Video Player</title>
     <style>
+        body {
+            font-family: sans-serif;
+            font-size: large;
+        }
         video {
-            width: 50%;
+            width: 100%;
             height: 50%;
         }
 
@@ -29,8 +33,8 @@
             border: none;
             border-radius: 50%;
             color: #ffffff;
-            font-size: 24px;
-            line-height: 50px;
+            font-size: 30px;
+            line-height: 40px;
             text-align: center;
             cursor: pointer;
         }
@@ -64,16 +68,19 @@
 </head>
 
 <body>
+    <h1>{{ name }}</h1>
     <video id="fullscreenVideo" controls="">
         <source src="{{ url_for('static',filename='movies/'+name+'/'+file) }}" type="video/mp4"> Your browser does not
         support the video tag.
-    </video><br><br>
+    </video>
+    <br><br>
     <button onclick="play()" class="play-button">
         &#9654;
     </button>
     <button onclick="pause()" class="pause-button">
-        &#9646;&#9646;
-    </button><br>
+        &#9616;&#9616;
+    </button>
+    <br>
     <button class="house-button" onclick="home()">
         &#8962;
     </button>
