--- a/templates/movie.html
+++ b/templates/movie.html
@@ -5,91 +5,95 @@
     <title>Auto Fullscreen Video Player</title>
     <style>
         body {
-            font-family: sans-serif;
-            font-size: large;
+            font-family: 'Arial', sans-serif;
+            font-size: 16px;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            background-color: #f4f4f4;
         }
+
+        h1 {
+            margin-bottom: 20px;
+            color: #333;
+        }
+
+        #video-container {
+            width: 100%;
+            max-width: 800px;
+            margin-bottom: 20px;
+        }
+
         video {
             width: 100%;
-            height: 50%;
+            height: auto;
+            border-radius: 8px;
+        }
+
+        .control-buttons {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .button {
+            width: 50px;
+            height: 50px;
+            border: none;
+            border-radius: 50%;
+            margin: 0 10px;
+            cursor: pointer;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 20px;
+            color: #fff;
         }
 
         .play-button {
-            width: 70px;
-            height: 70px;
             background-color: #3498db;
-            border: none;
-            border-radius: 50%;
-            color: #ffffff;
-            font-size: 24px;
-            line-height: 50px;
-            text-align: center;
-            cursor: pointer;
         }
 
         .pause-button {
-            width: 70px;
-            height: 70px;
             background-color: #e74c3c;
-            border: none;
-            border-radius: 50%;
-            color: #ffffff;
-            font-size: 30px;
-            line-height: 40px;
-            text-align: center;
-            cursor: pointer;
         }
 
         .house-button {
-            width: 70px;
-            height: 70px;
             background-color: #e74c3c;
-            border: none;
-            border-radius: 50%;
-            color: #ffffff;
-            font-size: 50px;
-            line-height: 40px;
-            text-align: center;
-            cursor: pointer;
         }
 
         .reload-button {
-            width: 70px;
-            height: 70px;
             background-color: #8ad60f;
-            border: none;
-            border-radius: 50%;
-            color: #ffffff;
-            font-size: 50px;
-            line-height: 40px;
-            text-align: center;
-            cursor: pointer;
+        }
+
+        .mute-button {
+            background-color: #8ad60f;
         }
     </style>
 </head>
 
 <body>
     <h1>{{ name }}</h1>
-    <video id="fullscreenVideo" controls="">
-        <source src="{{ url_for('static',filename='movies/'+name+'/'+file) }}" type="video/mp4"> Your browser does not
-        support the video tag.
-    </video>
-    <br><br>
-    <button onclick="play()" class="play-button">
-        &#9654;
-    </button>
-    <button onclick="pause()" class="pause-button">
-        &#9616;&#9616;
-    </button>
-    <br>
-    <button class="house-button" onclick="home()">
-        &#8962;
-    </button>
-    <button class="reload-button" onclick="reload()">
-        &#8635;
-    </button>
+    <div id="video-container">
+        <video id="fullscreenVideo" controls>
+            <source src="{{ url_for('static', filename='movies/' + name + '/' + file) }}" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+    <div class="control-buttons">
+        <button onclick="play()" class="button play-button">&#9654;</button>
+        <button onclick="pause()" class="button pause-button">&#9616;&#9616;</button>
+    </div>
+    <div class="control-buttons">
+        <button class="button house-button" onclick="home()">&#8962;</button>
+        <button class="button reload-button" onclick="reload()">&#8635;</button>
+        <button onclick="mute()" class="button mute-button" id="mute">🔊</button>
+    </div>
     <script>
-
-
         const video = document.getElementById('fullscreenVideo');
 
         video.addEventListener('play', () => {
@@ -107,15 +111,23 @@
         function play() {
             video.play();
         }
+
         function pause() {
             video.pause();
         }
+
         function home() {
             location.href = "/";
         }
+
         function reload() {
             location.reload();
         }
+        function mute() {
+            video.muted = !video.muted;
+            var btn = document.getElementById("mute");
+            btn.textContent = video.muted ? '🔈' : '🔊';
+          }
     </script>
 </body>
 
